--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
   </head>
   <body>
    
-    <h1>Welcome to My Awesome App</h1>
+    <h1>Welcome to Stephane's My Awesome App</h1>
     <div id="firebaseui-auth-container"></div>
 
 
